# SequenceRunner

./: .gitattributes  CMakeLists.txt  README.md
src/: main.cpp
src/files/: data.hpp  datahandle.cpp  datahandle.hpp
src/other/: cfg.hpp  exceptionhandler.hpp
src/runner/: sequence_runner.hpp
src/ui/: filedialog.cpp  filedialog.hpp  uiutils.hpp
ui/: app.rc  app_window.slint
